--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>TasteEat</title>
   </head>
   <body>
+    <div class="root">
     <header>
       <div class="header__top">
         <button class="button">Call - 123 456 789</button>
@@ -337,5 +338,6 @@
         </div>
       </div>
     </main>
+  </div>
   </body>
 </html>
